[package]
name = "codecrafters-dns-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
num_enum = "0.7.4"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.38"                             # error handling
